syntax = "proto3";

package clutch.chaos.experimentation.v1;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/lyft/clutch/backend/api/chaos/experimentation/v1;experimentationv1";

// The data used as an input for creating an experiment.
message CreateExperimentData {
  // The identifier of experiment run to create as part of experiment creation.
  string run_id = 1;
  // The experiment configuration specific to the type of experiment.
  google.protobuf.Any config = 2;
  // The time when the experiment should start. If unspecified, defaults to 'now'.
  google.protobuf.Timestamp start_time = 3;
  // The time when the experiment should end, If unspecified, the experiment runs indefinitely.
  google.protobuf.Timestamp end_time = 4;
}
